roar-istio/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: roar-gateway
spec:
  selector:
    # Which pods we want to expose as Istio router
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - "10.0.2.15"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: roar-web
spec:
  gateways:
  - roar-gateway
  hosts:
  - "10.0.2.15"
  http:
  - match:
    - uri:
        exact: /roar/api/v1/status
    - uri:
        exact: /roar/api/v1/status/version
    fault:
      abort:
        percent: 10
        httpStatus: 500
    route:
    - destination:
        host: roar-web
        port:
          number: 8089
        subset: version-1
      weight: 80
    - destination:
        host: roar-web
        port:
          number: 8089
        subset: version-2
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: roar-web
spec:
  host: roar-web
  subsets:
  - name: version-1
    labels:
      version: current
  - name: version-2
    labels:
      version: new
